--- a/tux_style.css
+++ b/tux_style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
 body  {
-    background-color: darkblue;
+    background-color: rgb(56, 56, 175);
     background-image: url("Mirror_Under_Construction_But_Better_Carlone_Cosi.png");
     background-size:cover;
     /* background-repeat: cover; */
@@ -38,7 +38,7 @@ body  {
     } */
     div {
         border-radius: 25px;
-        background: #173de6;
+        background: #7535b6;
         padding: 20px;
         width: 200px;
         height: auto;
@@ -58,13 +58,37 @@ body  {
         /* position: sticky; /* make sticky by uncommenting*/
         top: 0;
     }
-    .center {
+    .textbox {
         margin: auto;
         width: 75%;
         border: 3px solid rgb(231, 191, 12);
         padding: 15px;
         text-align: center;
         font-size: large;
+        top:0;
+        opacity:100%;
+    }
+    .overlay {
+        margin: auto;
+        width: 75%;
+        /* border: 3px solid rgb(231, 191, 12); */
+        padding: 15px;
+        text-align: center;
+        font-size: large;
+        /* position: relative; */
+        /* top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0; */
+        /* height: 100%;
+        width: 100%; */
+        opacity: 0;
+        transition: .5s ease;
+        background: #7535b6;
+        /* background-color: #008CBA; */
+      }
+    .textbox:hover .overlay {
+    opacity: 1;
     }
 
 /* @keyframes slide {
