--- a/tux_style.css
+++ b/tux_style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
 
 body  {
@@ -22,12 +21,11 @@ body  {
 @-webkit-keyframes slidein {
     from {background-position: top; background-size:50px; }
     to {background-position: -100px 0px;background-size:50px;}
-    }
+}
     
-    @keyframes slidein {
+@keyframes slidein {
     from {background-position: top;background-size:50px; }
-    to {background-position: -100px 0px;background-size:50px;}
-    
+    to {background-position: -100px 0px;background-size:50px;}   
 }
 
     /* body {
@@ -36,66 +34,95 @@ body  {
         background-repeat: repeat;
         animation: slide 6s linear infinite;
     } */
-    div {
-        border-radius: 25px;
-        background: #7535b6;
-        padding: 20px;
-        width: 200px;
-        height: auto;
-        z-index: 1;
-        opacity: 90%;     
-    }
 
-    .title{
-        margin: auto;
-        width: 80%;
-        opacity: 100%;
-        border: 5px solid rgb(231, 191, 12);
-        padding: 10px;
-        text-align: center;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: larger;
-        /* position: sticky; /* make sticky by uncommenting*/
-        top: 0;
-    }
-    .textbox {
-        margin: auto;
-        width: 75%;
-        border: 3px solid rgb(231, 191, 12);
-        padding: 15px;
-        text-align: center;
-        font-size: large;
-        top:0;
-        opacity:100%;
-    }
-    .overlay {
-        margin: auto;
-        width: 75%;
-        /* border: 3px solid rgb(231, 191, 12); */
-        padding: 15px;
-        text-align: center;
-        font-size: large;
-        /* position: relative; */
-        /* top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0; */
-        /* height: 100%;
-        width: 100%; */
-        opacity: 0;
-        transition: .5s ease;
-        background: #7535b6;
-        /* background-color: #008CBA; */
-      }
-    .textbox:hover .overlay {
-    opacity: 1;
-    }
+div {
+    border-radius: 25px;
+    background: #7535b6;
+    padding: 20px;
+    width: 200px;
+    height: auto;
+    z-index: 1;
+    opacity: 90%;     
+}
+
+.title{
+    margin: auto;
+    width: 80%;
+    opacity: 100%;
+    border: 5px solid rgb(231, 191, 12);
+    padding: 10px;
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    /* position: sticky; /* make sticky by uncommenting*/
+    top: 0;
+}
+
+.textbox {
+    margin: auto;
+    width: 75%;
+    border: 3px solid rgb(231, 191, 12);
+    padding: 15px;
+    text-align: center;
+    font-size: large;
+    top:0;
+    opacity:100%;
+}
+
+.overlay {
+    margin: auto;
+    width: 75%;
+    /* border: 3px solid rgb(231, 191, 12); */
+    padding: 15px;
+    text-align: center;
+    font-size: large;
+    /* position: relative; */
+    /* top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; */
+    /* height: 100%;
+    width: 100%; */
+    opacity: 0;
+    transition: .5s ease;
+    background: #7535b6;
+    /* background-color: #008CBA; */
+}
+
+.textbox:hover .overlay {
+opacity: 1;
+}
+
+@-webkit-keyframes surprise{
+    from {bottom:100%; top:0%}
+    to {bottom: 0%; top:100%}
+}
+
+@keyframes surprise{
+    from {bottom:100%; top:0%}
+    to {bottom: 0%; top:100%}
+}
+
+.big_tux{
+    /* display: block; */
+    width: 100%;
+    height: auto;
+    /* align-items: center; */
+    z-index: -1;
+    -webkit-animation-name: surprise;
+    -webkit-animation-duration: 4s;
+    -webkit-animation-iteration-count: infinite;
+    animation-name: surprise;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    /* animation-delay: 30s; */
+}
 
 /* @keyframes slide {
-    0% {
-        transform: translate(0);
-    }  
-    100% {
-        transform: translate(-3840px); /* The image width */
-    /*}
+0% {
+    transform: translate(0);
+}  
+100% {
+    transform: translate(-3840px); /* The image width */
+/*}
 } */
