--- a/tux_style.css
+++ b/tux_style.css
@@ -35,20 +35,18 @@ body  {
         animation: slide 6s linear infinite;
     } */
 
-div {
-    border-radius: 25px;
-    background: #7535b6;
-    padding: 20px;
-    width: 200px;
-    height: auto;
-    z-index: 1;
-    opacity: 90%;     
-}
+/* div {
+    /* padding: 20px; */
+    /* width: 200px; */
+/*} */
 
 .title{
+    background: #7535b6;
     margin: auto;
     width: 80%;
     opacity: 100%;
+    height: auto;
+    border-radius: 25px;
     border: 5px solid rgb(231, 191, 12);
     padding: 10px;
     text-align: center;
@@ -56,17 +54,22 @@ div {
     font-size: larger;
     /* position: sticky; /* make sticky by uncommenting*/
     top: 0;
+    z-index: 1;
 }
 
 .textbox {
+    background: #7535b6;
     margin: auto;
     width: 75%;
+    height: auto;
+    border-radius: 25px;
     border: 3px solid rgb(231, 191, 12);
     padding: 15px;
     text-align: center;
     font-size: large;
     top:0;
     opacity:100%;
+    z-index: 1;
 }
 
 .overlay {
@@ -94,13 +97,21 @@ opacity: 1;
 }
 
 @-webkit-keyframes surprise{
-    from {bottom:100%; top:0%}
-    to {bottom: 0%; top:100%}
+    0% {height: 0px;}
+    100% {height: 1000px;}
+    /* from {bottom:-100%; }
+    to {bottom: 0%; } */
+    /* from {margin-bottom: 100%;}
+    to {margin-bottom: 0%;} */
 }
 
 @keyframes surprise{
-    from {bottom:100%; top:0%}
-    to {bottom: 0%; top:100%}
+    0% {height: 0px;}
+    100% {height: 1000px;}
+    /* from {bottom:100%; }
+    to {bottom: 0%; } */
+    /* from {margin-bottom: 100%;}
+    to {margin-bottom: 0%;} */
 }
 
 .big_tux{
@@ -108,13 +119,14 @@ opacity: 1;
     width: 100%;
     height: auto;
     /* align-items: center; */
-    z-index: -1;
+    z-index: 2;
     -webkit-animation-name: surprise;
     -webkit-animation-duration: 4s;
     -webkit-animation-iteration-count: infinite;
     animation-name: surprise;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+    
     /* animation-delay: 30s; */
 }
 
