--- a/tux_style.css
+++ b/tux_style.css
@@ -16,6 +16,7 @@ body  {
 
     -webkit-animation-direction: alternate;
     animation-direction: alternate;              
+    position: relative;
 }
 
 @-webkit-keyframes slidein {
@@ -97,8 +98,9 @@ opacity: 1;
 }
 
 @-webkit-keyframes surprise{
-    0% {height: 0px;}
-    100% {height: 1000px;}
+    0% {opacity: 0; height: 0px;}
+    88% {opacity: 0; height: 0px;}
+    100% {opacity: 100; height: 1000px;}
     /* from {bottom:-100%; }
     to {bottom: 0%; } */
     /* from {margin-bottom: 100%;}
@@ -106,8 +108,9 @@ opacity: 1;
 }
 
 @keyframes surprise{
-    0% {height: 0px;}
-    100% {height: 1000px;}
+    0% {opacity: 0; height: 0px;}
+    88% {opacity: 0; height: 0px;}
+    100% {opacity: 100; height: 1000px;}
     /* from {bottom:100%; }
     to {bottom: 0%; } */
     /* from {margin-bottom: 100%;}
@@ -118,15 +121,16 @@ opacity: 1;
     /* display: block; */
     width: 100%;
     height: auto;
+    bottom: 0px;
+    position: absolute;
     /* align-items: center; */
-    z-index: 2;
+    z-index: 0;
     -webkit-animation-name: surprise;
-    -webkit-animation-duration: 4s;
+    -webkit-animation-duration: 30s;
     -webkit-animation-iteration-count: infinite;
     animation-name: surprise;
-    animation-duration: 4s;
+    animation-duration: 30s;
     animation-iteration-count: infinite;
-    
     /* animation-delay: 30s; */
 }
 
