--- a/Testing/starwars.css
+++ b/Testing/starwars.css
@@ -11,6 +11,15 @@ body  {
     /* overflow: hidden; */  /*allows scrolling*/
 }
 
+.fade {
+    position: relative;
+    width: 100%;
+    min-height: 40vh;
+    top: -25px;
+    background-image: linear-gradient(0deg, transparent, black 75%);
+    z-index: 1;
+  }
+
 .sw_text{
     overflow: hidden; /*cannot scroll while it is going on*/
     /*center on screen*/
