--- a/Cool_Template/Orb.css
+++ b/Cool_Template/Orb.css
@@ -2,7 +2,7 @@
 
 body  {
     background-color: rgb(56, 56, 175);
-    background-image: url("Mirror_Under_Construction_But_Better_Carlone_Cosi.png");
+    background-image: url("Starwarsstars.jpg");
     background-size:cover;
     position: relative;
 }
@@ -56,4 +56,13 @@ body  {
     /* opacity: 0; */
     transition: .5s ease;
     background: #7535b6;
+}
+
+.fire{
+    width:100%;
+    vertical-align: bottom;
+}
+
+img{
+    width: 100%;
 }
