--- a/Cool_Template/Orb.css
+++ b/Cool_Template/Orb.css
@@ -58,11 +58,32 @@ body  {
     background: #7535b6;
 }
 
-.fire{
-    width:100%;
-    vertical-align: bottom;
+.orb{
+    position: relative;
+    width: 100%;
+    text-align: center;
 }
+
+.text-container {
+    position: absolute;
+    color: rgb(0, 0, 0);
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* background-color: rgba(41, 41, 41, 0.8); */
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 25px;
+}
+
+/* .centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
 
 img{
     width: 100%;
+    height: 100%;
 }
